log
Fri 23 Sep 2022 05:47:36 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
9ceb60d
Fri 23 Sep 2022 05:48:40 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  4|7
total_score: 5/70
4d33f76
Fri 23 Sep 2022 05:51:26 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  11|6
total_score: 15/70
7b49006
Fri 23 Sep 2022 05:52:46 PM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  11|6
total_score: 15/70
3c99c7a
Fri 23 Sep 2022 05:52:53 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:91:1: error: control reaches end of non-void function [-Werror=return-type]
   91 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
97766d1
Fri 23 Sep 2022 05:53:06 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
e069004
Fri 23 Sep 2022 06:00:27 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
40f02ee
